--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "s3_cloud_front_r53_acm_iam_cdk",
+  "name": "cDKFullStackWebAppStack",
   "version": "0.1.0",
   "bin": {
-    "s3_cloud_front_r53_acm_iam_cdk": "bin/s3_cloud_front_r53_acm_iam_cdk.js"
+    "cDKFullStackWebApp": "bin/cDKFullStackWebApp.ts"
   },
   "scripts": {
     "build": "tsc",
@@ -13,14 +13,22 @@
   "devDependencies": {
     "@types/jest": "^29.4.0",
     "@types/node": "18.13.0",
+    "aws-cdk": "2.65.0",
     "jest": "^29.4.2",
     "ts-jest": "^29.0.5",
-    "aws-cdk": "2.65.0",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.5"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.65.0",
+    "@aws-cdk/aws-certificatemanager": "^1.195.0",
+    "@aws-cdk/aws-cloudfront": "^1.195.0",
+    "@aws-cdk/aws-iam": "^1.195.0",
+    "@aws-cdk/aws-route53": "^1.195.0",
+    "@aws-cdk/aws-route53-patterns": "^1.195.0",
+    "@aws-cdk/aws-route53-targets": "^1.195.0",
+    "@aws-cdk/aws-s3": "^1.195.0",
+    "@aws-cdk/aws-s3-deployment": "^1.195.0",
+    "@aws-cdk/core": "^1.195.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
